--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/lselbeck/ReactExpressStore/issues"
   },
-  "homepage": "https://github.com/lselbeck/ReactExpressStore#readme"
+  "homepage": "https://github.com/lselbeck/ReactExpressStore#readme",
+  "dependencies": {
+    "browser-sync": "^2.13.0",
+    "ejs": "^2.4.2",
+    "express": "^4.13.4",
+    "gulp": "^3.9.1",
+    "gulp-live-server": "0.0.30"
+  }
 }
